--- a/SingaporeGuide.html
+++ b/SingaporeGuide.html
@@ -213,11 +213,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Singapore/JurongParkGarden.jpeg" alt = "Jurong Park Garden">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.763597510689!2d103.7076908!3d1.3174672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0542cf100eaf%3A0xffb27edb3065ede1!2sGarden%20of%20Fame!5e0!3m2!1sen!2sus!4v1682821376455!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Jurong Park Garden</h4>
         <p>At this park, you can exlpore the biodiversity and fine in the restaurants nearby.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Singapore/ScienceCentreSingapore.jpg" alt = "Science Centre Singapore">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.73800778606!2d103.73573599999999!3d1.33335435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1004147cad63%3A0x18e02380e45f8dce!2sScience%20Centre%20Singapore!5e0!3m2!1sen!2sus!4v1682821443722!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Science Centre Singapore</h4>
 		<p>This institution specializes in the promotion of science and technological education 
 			for the public.
@@ -230,6 +232,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Singapore/HolyTreeSriBalasubramaniarTemple.jpg" alt = "Holy Tree Sri Balasubramaniar Temple">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.5546569282883!2d103.8318276!3d1.4420762999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da14864a3dd82b%3A0xe704666c714f34ee!2sHoly%20Tree%20Sri%20Balasubramaniar%20Temple!5e0!3m2!1sen!2sus!4v1682821501511!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Holy Tree Sri Balasubramaniar Temple</h4>
 		<p>This temple was founded in 1962 and became a religious and social space for 
 			the Hindu community.
@@ -242,11 +245,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Singapore/BukitTimahNatureReserve.jpg" alt = "Bukit Timah Nature Reserve">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.704202764169!2d103.77694539999999!3d1.3540561999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da10f5981ed73b%3A0x7b421dc2a7c58be!2sBukit%20Timah%20Nature%20Reserve!5e0!3m2!1sen!2sus!4v1682821555221!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Bukit Timah Nature Reserve</h4>
 		<p>This reserve is the country's highest natural peak at 541 feet high.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Singapore/LittleGuilin.jpg" alt = "Little Guilin">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7014397002226!2d103.75410559999999!3d1.3557342999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da10481370263d%3A0x7bd52a1da9b519eb!2sLittle%20Guilin!5e0!3m2!1sen!2sus!4v1682821599861!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Little Guilin</h4>
 		<p>This park was created from the disused granite quarry and resembles the granite 
 			rock formations in Guilin, China, hence the name.
