--- a/SouthAfricaGuide.html
+++ b/SouthAfricaGuide.html
@@ -219,6 +219,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/South Africa/BouldersBeach.jpg" alt = "Boulders Beach">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.0728392487836!2d18.44816981744386!3d-34.19561529999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc3e360872e029%3A0x7cbce00180f42910!2sBoulders%20Beach!5e0!3m2!1sen!2sus!4v1682821902489!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Boulders Beach</h4>
         <p>This beach is located between granite boulders and is known for its colony 
 			of African penguins.
@@ -226,6 +227,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Africa/KirstenboschGarden.jpg" alt = "Kirstenbosch National Botanical Garden">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.195919423577!2d18.432722000000002!3d-33.987501099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc42a862facc79%3A0x1b7c8ad971eaa566!2sKirstenbosch%20National%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1682821940615!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Kirstenbosch National Botanical Garden</h4>
 		<p>This garden is located at the eastern foot of Table Mountain and has a large 
 			cultivation of indigenous plants and a large conservatory that exhibits plants 
@@ -234,6 +236,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Africa/CapeOfGoodHope.jpg" alt = "Cape of Good Hope">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d421599.9883390424!2d18.19383683281251!3d-34.356842500000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc22fcace03f67%3A0x35285cf1b77ca2e9!2sCape%20of%20Good%20Hope!5e0!3m2!1sen!2sus!4v1682821998871!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Cape of Good Hope</h4>
 		<p>This headland off the coast of the Cape Peninsula serves as a significant 
 			port to sailors traveling from Europe to Asia before the Suuez Canal opened in 1869.
@@ -246,6 +249,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/South Africa/ConstitutionHill.jpg" alt = "Constitution Hill">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3580.2392068730232!2d28.043045099999997!3d-26.188895799999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e950c22bea2fed9%3A0x4a95c559b69382a2!2sConstitutional%20Court%20of%20South%20Africa!5e0!3m2!1sen!2sus!4v1682822085825!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Constitution Hill</h4>
 		<p>This precinct is the seat of the Constitutional Court of South Africa and was formally 
 			the location of a prison. The inside contains a museum that includes the Mandela cell 
@@ -254,6 +258,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Africa/LionAndSafariPark.jpg" alt = "Lion and Safari Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.125659868172!2d27.8887837!3d-25.8324043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9575b401cbb565%3A0xe6ce1057d9c95278!2sLion%20%26%20Safari%20Park!5e0!3m2!1sen!2sus!4v1682822157402!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Lion and Safari Park</h4>
 		<p>This park is a conservation enclosure for lions, hyenas, wild dogs, various 
 			antelope, and cheetahs.
@@ -261,6 +266,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Africa/WalterSisuluNationalBotanicalGardens.jpg" alt = "Walter Sisulu National Botanical Gardens">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.378882174974!2d27.844838999999997!3d-26.086548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95994c450eb50f%3A0xcd11e8cc251f3c59!2sWalter%20Sisulu%20National%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1682822206124!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Walter Sisulu National Botanical Gardens</h4>
 		<p>This garden is home to 240 species of birds as well as a pair of Verreaux's eagles with their nest 
 			on the cliff near the waterfall.
