--- a/SriLankaGuide.html
+++ b/SriLankaGuide.html
@@ -221,6 +221,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Sri Lanka/RoyalBotanicalGardenPeradeniya.jpg" alt = "Royal Botanical Garden Peradeniya">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.7587408466597!2d80.596599!3d7.268272800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae36890ae2f95fd%3A0x92ce8ec2bf791233!2sRoyal%20Botanical%20Garden%20Peradeniya!5e0!3m2!1sen!2sus!4v1682822489993!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Royal Botanical Garden Peradeniya</h4>
         <p>This garden contains 4,000 species of plants and is most known for its 
 			collection of orchids.
@@ -228,6 +229,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sri Lanka/KandyLake.jpg" alt = "Kandy Lake">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7915.12987433883!2d80.6419559!3d7.29023805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3662e444100a7%3A0x1a8a9896b2d68651!2sKandy%20Lake!5e0!3m2!1sen!2sus!4v1682822533924!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Kandy Lake</h4>
 		<p>This lake is located by the Temple of the Tooth and was known to the native 
 			people as "Sea of Milk"
@@ -235,6 +237,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sri Lanka/WorldBuddhistMuseum.jpg" alt = "World Buddhist Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.5314538945036!2d80.64185020000001!3d7.294026300000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3662dbba8562d%3A0xcf892bc819b4519f!2sWorld%20Buddhist%20Museum!5e0!3m2!1sen!2sus!4v1682822580373!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>World Buddhist Museum</h4>
 		<p>This museum is the world's first international Buddhist museum and is 
 			dedicated to the expansion of Buddhism around the world.
@@ -247,6 +250,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Sri Lanka/MaritimeMuseum.jpg" alt = "Maritime Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.7565983498243!2d80.2184257!3d6.028109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae173a5cd0fe0e7%3A0x77a965e07f789585!2sMaritime%20Museum%20-%20Galle!5e0!3m2!1sen!2sus!4v1682822636440!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Maritime Museum</h4>
 		<p>This museum is dedicated to the biological and anthropological aspects of the 
 			Southern coastal area.
@@ -254,6 +258,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sri Lanka/GalleLighthouse.jpg" alt = "Galle Lighthouse">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.7825345878696!2d80.21936609999997!3d6.024561299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae173a7b5b11cbd%3A0xfde8772f0d014daf!2sLighthouse%20-%20Galle!5e0!3m2!1sen!2sus!4v1682822698934!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Galle Lighthouse</h4>
 		<p>This lighthouse is Sri Lanka's oldest light station.</p>
 	</div>
