--- a/SwedenGuide.html
+++ b/SwedenGuide.html
@@ -222,6 +222,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Sweden/Skansen.jpg" alt = "Skansen">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.3540518793861!2d18.1037456!3d59.32704259999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f82aafeda9437%3A0x2c35b6cfd6468531!2sSkansen!5e0!3m2!1sen!2sus!4v1682828509445!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Skansen</h4>
         <p>This open-air museum and zoo contains a collection of historic structures 
 			from Central and Eastern Europe.
@@ -229,11 +230,13 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sweden/RoyalPalace.jpg" alt = "The Royal Palace">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.3672942036644!2d18.071719399999996!3d59.3268215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d587e4c4a01%3A0xbdf97a9648763e36!2sThe%20Royal%20Palace!5e0!3m2!1sen!2sus!4v1682828543771!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Royal Palace</h4>
 		<p>Take a tour of the official residence of the Swedish royal family.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sweden/VasaMuseum.jpg" alt = "Vasa Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.2953145288525!2d18.0913964!3d59.3280233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d546d8329af%3A0xcff09af1b4c13241!2sVasa%20Museum!5e0!3m2!1sen!2sus!4v1682828578128!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Vasa Museum</h4>
 		<p>This museum is dedicated to the warship Vasa that is still fully intact after 
 			having sank in 1628.
@@ -246,6 +249,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Sweden/Universeum.jpg" alt = "Universeum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2132.231585669857!2d11.989406299999999!3d57.695535199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff39e0791ad9b%3A0x30ab0c07481829d4!2sUniverseum!5e0!3m2!1sen!2sus!4v1682828612548!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Universeum</h4>
 		<p>This science center and museum contains exhibits on space exploration, 
 			humans, and technology, and animals such as reptiles and insects.
@@ -253,6 +257,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Sweden/VolvoMuseum.jpg" alt = "VOLVO Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2132.2793069568884!2d11.819550699999999!3d57.69472439999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8c45f208af67%3A0x72c167d8eea0246e!2sVOLVO%20Museum!5e0!3m2!1sen!2sus!4v1682828643268!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>VOLVO Museum</h4>
 		<p>This museum is dedicated to Sweden's leading vehicular manufacturer Volvo 
 			and its development.
