--- a/ThailandGuide.html
+++ b/ThailandGuide.html
@@ -214,6 +214,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Thailand/GrandPalace.jpg" alt = "The Grand Palace">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.4807721559664!2d100.4915765!3d13.7498558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2994e316c363f%3A0x2a6c77dd93ef4c41!2sThe%20Grand%20Palace!5e0!3m2!1sen!2sus!4v1682829573264!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Grand Palace</h4>
         <p>This palace was built in 1782 and features multiple buildings like the 
 			Temple of the Emerald Buddha and several courtyards.
@@ -221,6 +222,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Thailand/ChatuchakMarket.jpg" alt = "The Chatuchak Market">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7749.315965783248!2d100.5473201!3d13.799479749999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29c14e883f8dd%3A0x91f191d784b87d4b!2sChatuchak%20Weekend%20Market!5e0!3m2!1sen!2sus!4v1682829706440!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Chatuchak Market</h4>
 		<p>This market has more than 15,000 stalls that sell food and drinks, 
 			antiques, cosmetics, and accessories.
@@ -228,6 +230,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Thailand/BangkokNationalMuseum.jpg" alt = "The Bangkok National Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.3446466498904!2d100.49170769999999!3d13.758077900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2990cc24b766d%3A0x55fea5dec504fd3b!2sNational%20Museum%20Bangkok!5e0!3m2!1sen!2sus!4v1682829749779!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Bangkok Nationak Museum</h4>
 		<p>The museum is the largest museum in Southeast Asia and contains a vast collection of 
 			artifacts and artwork showcasing the country's rich history and culture, including 
@@ -236,6 +239,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Thailand/DusitZoo.jpg" alt = "Dusit Zoo">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.074873723169!2d100.5171903!3d13.774358200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2995a171db3b5%3A0x9a386d6fd2059fb0!2sDusit%20Zoo!5e0!3m2!1sen!2sus!4v1682829792998!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Dusit Zoo</h4>
 		<p>This zoo was built in 1938 by King Chulalongkorn and features over 1,600 species 
 			of domestic and international animals.
