--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -177,6 +177,7 @@
 		<li><a href = "SwedenGuide.html">Sweden</a></li>
 		<li><a href = "ThailandGuide.html">Thailand</a></li>
 		<li><a href = "TurkeyGuide.html">Turkey</a></li>
+		<li><a href = "TurkeyGuide.html"></a>Turkey</li>
 	</ul>
 
 	<!-- Navigation bar that holds the sort button, home and about buttons, and search bar -->
