--- a/TurkeyGuide.html
+++ b/TurkeyGuide.html
@@ -222,6 +222,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Turkey/HagiaSophia.jpg" alt = "The Hagia Sophia">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.76196177466!2d28.980175000000003!3d41.008583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab9be92011c27%3A0x236e6f6f37444fae!2sHagia%20Sophia!5e0!3m2!1sen!2sus!4v1682829851395!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Hagia Sophia</h4>
         <p>This mosque was built during the time of the Byzantine empire and is now 
             a major cultural site in Turkey.
@@ -229,6 +230,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Turkey/BlueMosque.jpg" alt = "The Blue Mosque">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.9069588424068!2d28.976813800000006!3d41.00540960000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab9bd6570f4e1%3A0xe52df7368a157ca4!2sThe%20Blue%20Mosque!5e0!3m2!1sen!2sus!4v1682829896130!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Blue Mosque</h4>
 		<p>This mosque built in 1616 has blue tiles adorning the interior and is 
             bathed in blue lights.
@@ -236,6 +238,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Turkey/GrandBazaar.jpg" alt = "The Grand Bazaar">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.665922519725!2d28.9680681!3d41.010684800000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab99162d70527%3A0x64c8680b5ac198ab!2sGrand%20Bazaar!5e0!3m2!1sen!2sus!4v1682830094605!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Grand Bazaar</h4>
 		<p>This market is one of the biggest of its kind in Istanbul covering 61 streets 
             and contains over 4,00 shops.
@@ -248,6 +251,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Turkey/AntalyaArcheologicalMuseum.jpg" alt = "Antalya Archeological Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.180942407991!2d30.679655600000004!3d36.886019399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c3903a436755b1%3A0x7c5693a8556f6470!2sAntalya%20Archeology%20Museum!5e0!3m2!1sen!2sus!4v1682830165098!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Antalya Archeological Museum</h4>
 		<p>This museum is one of the largest in Turkey and is dedicated to the history 
             of the Mediterranean and Pamphylia regions.
@@ -255,6 +259,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Turkey/DudenWaterfalls.jpg" alt = "Duden Waterfalls">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.9300382073857!2d30.7265959!3d36.9637277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c38609ce7b71bb%3A0x72b76ecab61aa788!2sDuden%20Waterfalls!5e0!3m2!1sen!2sus!4v1682830280217!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Duden Waterfalls</h4>
 		<p>This group of waterfalls occurs as the Duden River splits off the Antalya 
             cliff and into the sea.
