--- a/NewZealandGuide.html
+++ b/NewZealandGuide.html
@@ -227,6 +227,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/New Zealand/SkyTower.jpg" alt = "Sky Tower">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.7506262369034!2d174.762191!3d-36.848448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d47f06d4bdc25%3A0x2d1b5c380ad9387!2sSky%20Tower!5e0!3m2!1sen!2sus!4v1682820266776!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Sky Tower</h4>
         <p>This telecommunications and observation tower is 1,076 feet tall and contains 
 			restaurants and a cafe.
@@ -234,6 +235,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/AucklandZoo.jpg" alt = "Auckland Zoo">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.096329912839!2d174.719685!3d-36.86411299999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d471233b27243%3A0x56925ebc833ee8ee!2sAuckland%20Zoo!5e0!3m2!1sen!2sus!4v1682820319369!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Auckland Zoo</h4>
 		<p>This zoo plays a part in conservation, research, and education of the species 
 			of flor and faunce that live here.
@@ -241,6 +243,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/AucklandArtGallery.jpg" alt = "Auckland Art Gallery Toi o Tamaki">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.629266345643!2d174.766237!3d-36.85135400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d47fb2e12486d%3A0x3e90bef6528b7215!2sAuckland%20Art%20Gallery!5e0!3m2!1sen!2sus!4v1682820358991!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Auckland Art Gallergy Toi o Tamaki</h4>
 		<p>This gallergy has the most extensive collection of national and international 
 			art in New Zealand.
@@ -248,6 +251,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/AucklandWarMemorial.jpg" alt = "Auckland War Memorial Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.2381651899445!2d174.7777538!3d-36.860717699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d480b4bfd8503%3A0xb879d9072a5a83c0!2sAuckland%20War%20Memorial%20Museum!5e0!3m2!1sen!2sus!4v1682820447079!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Auckland War Memorial Museum</h4>
 		<p>This museum is dedicated to New Zealand's natural and military history.</p>
 	</div>
@@ -258,6 +262,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/New Zealand/WhakarewarewaForest.jpg" alt = "Whakarewarewa Forest">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100336.39512011631!2d176.29323465!3d-38.19800015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6c27617c2d1aed%3A0x519b34b0405a6341!2sWhakarewarewa%20Forest%20Park%2C%20Whakarewarewa%2C%20Rotorua%2C%20New%20Zealand!5e0!3m2!1sen!2sus!4v1682820523953!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Whakarewarewa Forest</h4>
 		<p>In this forest you can hike, cycle, or ride on horeback through a diverse range 
 			of exotic trees.
@@ -265,6 +270,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/PolynesianSpa.jpg" alt = "Polynesian Spa">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3138.0988373629507!2d176.25822139999997!3d-38.13789469999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6e9d870e2ef5b1%3A0xc26182040f5be75!2sPolynesian%20Spa!5e0!3m2!1sen!2sus!4v1682820597149!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Polynesian Spa</h4>
 		<p>This spa contains geothermal bathing and access to acidic and alkaline natural mineral springs.</p>
 	</div>
@@ -275,6 +281,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/New Zealand/ChristchurchGardens.jpg" alt = "Christchurch Botanic Gardens">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.6400214726305!2d172.6232211!3d-43.530698900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d321cdb1946f135%3A0x580e398bb0fdc546!2sChristchurch%20Botanic%20Gardens!5e0!3m2!1sen!2sus!4v1682820644678!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Christchurch Botanic Gardens</h4>
 		<p>This garden, founded in 1863, is 21 hectacres and has a variety of exotic and local 
 			plants, a nursery, several conservatiories, a playground, and a climatological station.
@@ -282,6 +289,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/HagleyPark.jpg" alt = "Hagley Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.8696148263007!2d172.6206291!3d-43.5259116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d318a443f97f56f%3A0xf00ef87655c12f0!2sHagley%20Park%20North!5e0!3m2!1sen!2sus!4v1682820689380!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Hagley Park</h4>
 		<p>This is the largest urban park in New Zealand. According to the government's decree at the time 
 			of its creation, this park is "reserved forever as a public park, and shall be open for the recreation 
@@ -290,6 +298,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/New Zealand/WillowbankWildlifeReserve.jpg" alt = "Willowbank Wildlife Reserve">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.859694436511!2d172.5940714!3d-43.4635263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d318c90218163a1%3A0xf00ef87655c07f0!2sWillowbank%20Wildlife%20Reserve!5e0!3m2!1sen!2sus!4v1682820734070!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Willowbank Wildlife Reserve</h4>
 		<p>This nature reserve has public displays of various native animal species such as the tuatara and 
 			the kiwi.
