--- a/PeruGuide.html
+++ b/PeruGuide.html
@@ -220,11 +220,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Peru/LarcoMuseum.jpg" alt = "Larco Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.58216766254!2d-77.07064319999999!3d-12.072243799999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c91a5000653d%3A0x1654d5501a2ea1e9!2sLarco%20Museum!5e0!3m2!1sen!2sus!4v1682820866119!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Larco Museum</h4>
         <p>This museum is dedicated to Peruvian pre-Columbian art and history.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Peru/MagicWaterCircuit.jpg" alt = "Magic Water Circuit">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.593889760747!2d-77.0339206!3d-12.0714389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8ecd394353f%3A0x51976ed4a94a169f!2sMagic%20Water%20Circuit!5e0!3m2!1sen!2sus!4v1682820904283!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Magic Water Circuit</h4>
 		<p>This water and light show commemorates the civillans who fought for Lima 
 			in the War of the Pacific.
@@ -232,6 +234,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Peru/LimaMainSquare.jpeg" alt = "Lima Main Square">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.9639152280524!2d-77.03054579999996!3d-12.046003799999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8b5d5aa7eb1%3A0x16061e0b481e22aa!2sLima%20Main%20Square!5e0!3m2!1sen!2sus!4v1682820953823!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Lima Main Square</h4>
 		<p>This area is considered the birthpalce of the city of Lima.</p>
 	</div>
@@ -242,11 +245,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Peru/MachuPicchu.jpg" alt = "Machu Picchu">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3883.9838383567344!2d-72.4973215!3d-13.2263308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916d9a5f89555555%3A0x3a10370ea4a01a27!2sMachu%20Picchu!5e0!3m2!1sen!2sus!4v1682821033821!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Machu Picchu</h4>
 		<p>This monument of ancient ruins is the most familiar icon of the Inca Empire.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Peru/Qorikancha.jpg" alt = "Qorikancha">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3879.250114482453!2d-71.97523389999999!3d-13.520236500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916dd60accf73e25%3A0x699118adc425673d!2sQorikancha!5e0!3m2!1sen!2sus!4v1682821115228!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Qorikancha</h4>
 		<p>This temple was dedicated to the ancient Incan sun god and was located in the former
 			Inca capital.
