--- a/SpainGuide.html
+++ b/SpainGuide.html
@@ -220,6 +220,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Spain/ArteReinaSofia.jpg" alt = "Museo Nacional Centro de Arte Reina Sofia">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.0423631185267!2d-3.6945569!3d40.4079123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422628db3a07bd%3A0x309814d159babf71!2sMuseo%20Nacional%20Centro%20de%20Arte%20Reina%20Sof%C3%ADa!5e0!3m2!1sen!2sus!4v1682822265014!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Museo Nacional Centro de Arte Reina Sofia</h4>
         <p>This museum is Spain's national museum that contains 20th century Spanish artwork 
 			from artists such as Pablo Picasso and Salvador Dali.
@@ -227,6 +228,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Spain/SanMiguelMarket.jpg" alt = "San Miguel Market">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.7052765001986!2d-3.708969699999999!3d40.4153794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42287921196e2d%3A0x162fe6d34dd190e8!2sMercado%20de%20San%20Miguel!5e0!3m2!1sen!2sus!4v1682822306393!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>San Miguel Market</h4>
 		<p>This local food market contains dishes from all parts of the country that can be sampled.</p>
 	</div>
@@ -237,6 +239,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Spain/MercadoDeLaBoqueria.jpg" alt = "Mercado de La Boqueria">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.6476273854814!2d2.1715853!3d41.3817399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2f7b51e5a01%3A0x860ac654dc73add5!2sMercado%20de%20La%20Boqueria!5e0!3m2!1sen!2sus!4v1682822351289!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Mercado de La Boqueria</h4>
 		<p>This public food market offers local and international food products and is known 
 			as the heart of Barcelona.
@@ -244,6 +247,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Spain/ParkGuell.jpg" alt = "Park Guell">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.139295584125!2d2.1526944999999995!3d41.41449480000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2ae52d441ab%3A0x899a0ba01aaace58!2sPark%20G%C3%BCell!5e0!3m2!1sen!2sus!4v1682822415980!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Park Guell</h4>
 		<p>This park contains gardens and architectural structures by Catalan architect Antoni Gaudi.</p>
 	</div>
