--- a/SwitzerlandGuide.html
+++ b/SwitzerlandGuide.html
@@ -223,16 +223,19 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Switzerland/SwissNationalMuseum.jpg" alt = "Swiss National Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.685531502478!2d8.5405492!3d47.379055799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a091c10852d%3A0xff1df55a58200ecc!2sSwiss%20National%20Museum!5e0!3m2!1sen!2sus!4v1682828800381!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Swiss National Museum</h4>
         <p>This museum is dedicated to Switzerland's entire history all the way up to the present day.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Switzerland/Grossmunster.jpg" alt = "Grossmunster">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2702.1447582232795!2d8.544054!3d47.3700931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa0aa49df6165%3A0x491a251494535f10!2sGrossm%C3%BCnster!5e0!3m2!1sen!2sus!4v1682828844623!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Grossmunster</h4>
 		<p>This Protestant church was built in 1220 and is one of four major churches in Zurich.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Switzerland/ZurichZoo.jpg" alt = "Zurich Zoo">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21611.24413308271!2d8.557082639550787!3d47.38452020000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa0ea12b7a697%3A0x31929c3728d4b721!2sZoo%20Z%C3%BCrich!5e0!3m2!1sen!2sus!4v1682828883763!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Zurich Zoo</h4>
 		<p>This zoo contains 300 species of animals, with its main attraction being the Asian 
 			elephants and Masoala Hall.
@@ -245,6 +248,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Switzerland/StPierreCathedral.jpg" alt = "St. Pierre Cathedral">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.46888680873!2d6.1485159000000005!3d46.201126699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c652c3524b58d%3A0x79c4aa45d974931d!2sSt%20Pierre%20Cathedral!5e0!3m2!1sen!2sus!4v1682828978016!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>St. Pierre Cathedral</h4>
 		<p>This gothic-style church was built in the 12th century and was converted into a 
 			Reformed Protestant church from a Roman Catholic cathedral.
@@ -252,6 +256,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Switzerland/GenevaBotanicalGardenAndGreenhouse.jpg" alt = "Geneva Botanical Garden and Greenhouse">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2760.217367089363!2d6.1474028!3d46.2260219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c651d34492527%3A0x549108794caa6ce1!2sBotanical%20Garden%20Greenhouse!5e0!3m2!1sen!2sus!4v1682829178953!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Geneva Botanical Garden and Greenhouse</h4>
 		<p>This greenhouse contains over 12,000 species of plants from around the world 
 			and contains a historical herbarium with about 6 million botanical specimens.
@@ -259,6 +264,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Switzerland/GenevaWaterFountain.jpg" alt = "The Geneva Water Fountain">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.1541255195893!2d6.155902800000001!3d46.2073889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c653a624987c5%3A0x37fb9048f509248!2sThe%20Geneva%20Water%20Fountain!5e0!3m2!1sen!2sus!4v1682829262978!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Geneva Water Fountain</h4>
 		<p>This water fountain was built in 1886 to release excess pressure from the 
 			hydraulic plant and shoot water up to 460 feet into the air.
